# ComfyUI-SwissArmyKnife

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCUMENTATION_MOVE_SUMMARY.md  Dockerfile  MANIFEST.in  README.md  RESTART_BUTTON.md  __init__.py  cache_info.json  conftest.py  debug_civitai.py  docker-compose.yml  eslint.config.js  install.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test_cache_verification.py  tsconfig.json  vite.config.mts
.github/: COPILOT_INSTRUCTIONS.md  copilot-instructions.md
.github/instructions/: copilot-instructions.md
.github/workflows/: ci.yml  publish-to-registry.yml
VHS_SK/: __init__.py
dev-docs/: CONSOLIDATION_GUIDE.md  README.md  VENDORING.md
dev-docs/comfyui/: custom-nodes_documentation_guidelines.md
dev-docs/examples/: WORKFLOW_DEMO.md  example_workflow.json
dev-docs/infrastructure/: SETTINGS_INTEGRATION_SUMMARY.md  TEMP_DIRECTORY_UTILS.md
dev-docs/web-js/: CONTROL_PANEL.md  CONTROL_PANEL_PROMPT_BREAKDOWN_JSON_UPDATE.md  GPU_CUSTOMLINEAR_FIX.md  GPU_MODEL_GROUPING_METADATA.md  README.md  UPLOAD_WIDGETS.md  UPLOAD_WIDGET_IMPLEMENTATION.md
docs/: ASPECT_RATIO_TOGGLE_FEATURE.md  ASYNC_EVENT_LOOP_FIX.md  CACHE_OPTIMIZATION_FIX.md  CACHE_VERIFICATION_SUMMARY.md  CACHING.md  CHANGE_CLOTHING_COLOR_FEATURE.md  CIVITAI_API_KEY_WIDGET.md  CIVITAI_SERVICE_CONSOLIDATION.md  CLASS_RENAME_MEDIADESCRIBE.md  CLOTHING_TEXT_EXCLUSION.md  CONSOLIDATION_GUIDE.md  CONSOLIDATION_SUMMARY.md  DEBUG_MODE_IMPLEMENTATION.md  DECISIVENESS_IMPROVEMENTS.md  DIMENSIONS_DISPLAY_TROUBLESHOOTING.md  DIMENSIONS_DISPLAY_WIDGET.md  DOCKER_DEVELOPMENT_SETUP.md  DOCUMENTATION_REORGANIZATION.md  DUAL_LORA_PANEL_IMPLEMENTATION.md  FINAL_STRING_WIDGET_FIX.md  GEMINI_API_500_ERROR_FIX.md  GEMINI_UTILS_REFACTORING_PLAN.md  IMPLEMENTATION_STATUS.md  JAVASCRIPT_CACHE_BUSTING.md  JAVASCRIPT_ERROR_FIX.md  JAVASCRIPT_NODE_NAME_UPDATE.md  JAVASCRIPT_REDDIT_POST_FIX.md  JOYCAPTION_INTEGRATION.md  JSON_OUTPUT_FORMAT.md  LORA_JSON_CLEANUP.md  LORA_MANAGER_INTEGRATION.md  LORA_METADATA_INTEGRATION.md  LORA_STACK_METADATA_ENHANCEMENT.md  MULTIPLE_HASH_TYPES_CIVITAI_INTEGRATION.md  MULTIPLE_LORA_SUPPORT.md  ND_SUPER_NODES_FORK_SUMMARY.md  ND_SUPER_NODES_UPDATE_REMOVAL.md  PYTHON_PACKAGE_BUILD_FIX.md  README.md  REDDIT_INPUT_FOLDER_STORAGE.md  (+28 more)
docs/examples/: README.md
docs/features/: ASYNC_EVENT_LOOP_FIX.md  CONFIGURABLE_OPTIONS_GUIDE.md  CONTROL_PANEL_CHANGES.md  DECISIVENESS_IMPROVEMENTS.md  JAVASCRIPT_CACHE_BUSTING.md  JAVASCRIPT_IMPROVEMENTS.md  README.md  TWERKING_ACTION_REPLACEMENT.md
docs/infrastructure/: JSON_FIELD_ORDER_STANDARDIZATION.md  SETTINGS_INTEGRATION.md  SETTINGS_INTEGRATION_SUMMARY.md  TEMP_DIRECTORY_UTILS.md
docs/ui-widgets/: CONTROL_PANEL_IMPLEMENTATION.md  CONTROL_PANEL_JSON_DATA_FIX.md  DIMENSIONS_DISPLAY_TROUBLESHOOTING.md  FINAL_STRING_WIDGET_FIX.md  README.md  SEED_WIDGET.md  WIDGET_FIXES.md  WIDGET_INVESTIGATION_AND_FIXES.md
docs/vue/: INTEGRATION_GUIDE.md  INTEGRATION_WITH_EXISTING_VIDEO_PREVIEW.md  QUICK_REFERENCE.md  QUICK_START_VIDEO_COMPARISON.md  README.md  TESTING.md  VIDEO_COMPARISON_WIDGET.md  VUE_SETUP_SUMMARY.md
docs/web-js/: CONTROL_PANEL.md  CONTROL_PANEL_PROMPT_BREAKDOWN_JSON_UPDATE.md  DIMENSIONS_DISPLAY.md  GPU_MEMORY_SCANNING.md  LLM_STUDIO_STRUCTURED_DYNAMIC_OUTPUTS.md  README.md  RESOURCE_MONITOR.md  RESOURCE_MONITOR_TESTING.md  SEED_WIDGET.md  WIDGET_FIXES.md
example_nodes/: example_node.py
nodes/: cache.py  civitai_service.py  config_api.py  debug_utils.py  helper_nodes.py  lora_hash_cache.py  monitor_api.py  nodes.py  restart_api.py  vue_example_node.py
nodes/examples/: __init__.py
nodes/joycaption/: CaptionTools.py  JC.py  JC_GGUF.py  README.md  __init__.py  jc_data.json  requirements.txt
nodes/lora_manager/: README.md  lora_utils.py  nd_super_lora_node.py  template_manager.py
nodes/media_describe/: __init__.py  gemini_util_options.py  joycaption_describe.py  llm_studio_describe.py  llm_studio_options.py  llm_studio_picture_describe.py  llm_studio_structured.py  media_describe.py  media_describe_overrides.py  mediia_describe.py  prompt_breakdown.py  prompts.md  prompts.py
nodes/media_selection/: __init__.py  frame_extractor.py  media_selection.py  multi_caption_combiner.py
nodes/transformers_wrapper/: __init__.py  transformers_wrapper_node.py
nodes/utils/: azure_storage_upload.py  civit_metadata_helper.py  control_panel.py  gpu_monitor.py  lora_info_extractor.py  prompt_builder.py  temp_utils.py  video_comparison_vue.py  video_preview.py  video_preview_native.py
nodes/vace_annotators/: __init__.py  scribble_loader.py  vace_depth_annotator.py  vace_flow_annotator.py  vace_scribble_annotator.py
scripts/: README.md  cache_bust.sh  run_scribble_node.py  test_cache_verification.py
src/nodes/: __init__.py  cache.py  civitai_service.py  config_api.py  helper_nodes.py  lora_hash_cache.py  nodes.py
tests/: run_redgifs_manual_test.py  test_civitai.py  test_gpu_monitor.py  test_media_selection_redgifs.py  test_resource_monitor.py  test_run_scribble_runner.py  test_vace_scribble_annotator_mask.py
tests/annotators/: test_scribble_inference.py
ui/: main.ts
ui-react_backup/: __init__.py
ui-react_backup/ui/: package-lock.json  package.json
ui/components/: DrawingApp.vue  DrawingBoard.vue  ToolBar.vue  VueExampleComponent.vue
utils/: civitai_service.py  lora_hash_cache.py  nodes.py
utils/lora_manager/: README.md  __init__.py  civitai_service.py  file_api.py  lora_utils.py  nd_super_lora_node.py  template_manager.py  version_utils.py  web_api.py
utils/media_describe/: __init__.py  media_describe_node.py
vue-components/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.mts
vue-components/src/: main.ts
web/: package.json
web/css/: resource-monitor.css  restart-button.css
web/docs/: AzureStorageUpload.md  CivitMetadataHelper.md  ControlPanelOverview.md  ControlPanelPromptBreakdown.md  FilenameGenerator.md  FrameExtractor.md  GeminiUtilOptions.md  LLMStudioOptions.md  LLMStudioPictureDescribe.md  ShowText.md  (+16 more)
(+185 files in other folders)
